Applied idea from idefix (see bug #5938): try to launch screen_blanker by path when a launch by signature fails.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37305 a95241bf-73f2-0310-859d-f6bbb57e9c96